ingress-traefik/traefik-prometheus.yml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`r1.navida.dev`) && PathPrefix(`/traefik/metrics`)
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
